html and basic tags
html and basic tags

--- a/ques1.html
+++ b/ques1.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title> Web page </title>
+    <title>Data Structure </title>
 </head>
 <body>
-    <h1> My first web page </h1>
+    <h1 style="text-align: center;"> Data Structure </h1>
+    <p>Stack is a <span>linear data structure </mark>. <br>
+        It works on the principle of <u>LIFO</u>(last in first out) which means lastly pushed element can be popped out first. <br>
+        Stack can be implemented using array or linked list. <br>
+        Dynamic stack is a stack which will never exercise stack overflow condition. <br>
+        Stack data structure is used by operating system to solve different kinds of expression.
+    </p>
 </body>
 </html>
