html and basic tags
html and basic tags

--- a/ques2.html
+++ b/ques2.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>web page</title>
+    <title>Display Image</title>
 </head>
-<body style="background-color: pink;">
+<body>
+    <h2>Displaying Image</h2>
+    <img src="Desert.jpeg" width="600" height="500">
     
-    <h1 style="text-align: center;"> Welcome to web programming </h1>
-    <h2 style="text-align: center;"> Welcome to web programming </h2>
-    <h3 style="text-align: center;"> Welcome to web programming </h3>
-    <h4 style="text-align: center;"> Welcome to web programming </h4>
-    <h5 style="text-align: center;"> Welcome to web programming </h5>
-    <h6 style="text-align: center;"> Welcome to web programming </h6>
 </body>
 </html>
