html and basic tags
html and basic tags

--- a/ques 4/page2.html
+++ b/ques 4/page2.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title> Use of Interfaces </title>
+    <title>Document</title>
 </head>
 <body>
-    <h1 style="text-align: center;"> Use of Interfaces </h1>
-    <h3>An Interface in Java programming language is defined as an abstract type used to specify the behaviour of a class. <br/> 
-        An interface in Java is a blueprint of a behaviour. <br/>
-        A Java interface contains static constants and abstract methods.
-    </h3>
-    <a href="/page3.html">instanceOf Operator</a>
+    <a href="/page3.html"> about computer </a>
+    <h2>hello dessert</h2>
+    <p>A dessert is a sweet dish or food, typically eaten at the end of a meal. It's a popular way to conclude a meal in many cultures, often featuring items like cake, pastries, ice cream, or fruit. </p>
 </body>
 </html>
