--- a/ques 4/page3.html
+++ b/ques 4/page3.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Instance of Operator</title>
+    <title>page 3</title>
 </head>
 <body>
-    <h1 style="text-align: center;"> Use of instance of operator </h1>
-    <h3>In Java, instanceof is a keyword used for checking if a reference variable contains a given type of object reference or not. <br>
-        Following is a Java program to show different behaviors of instanceof. <br/>
-        Henceforth it is known as a comparison operator where the instance is getting compared to type returning boolean true or false as in Java we do not have 0 and 1 boolean return types.
-    </h3>
-    <a href="/page4.html">Exception Handling</a>
+    <a> <img src="../Computer.jpg" ></a>
+    <h2>hello Computer</h2>
+    <p>A computer is an electronic machine that stores and processes data according to instructions. It's a programmable device capable of performing arithmetic or logical operations, and it can store and retrieve information. Essentially, a computer takes data as input, manipulates it based on a set of instructions (a program), and provides output. </p>
 </body>
 </html>
