intro to style sheet
intro to style sheet

--- a/Ques1.html
+++ b/Ques1.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login forms</title>
-    <link rel="stylesheet" href="formsQues1.css" type="text/css">
+    <title>Login Forms</title>
 </head>
 <body>
-    <ul>
-        <li> <a href="#"> Home </a></li>
-        <li><a href="#"> Course </a></li>
-        <li><a href="#"> Registration </a></li>
-        <li><a href="#"> Schedule </a></li>
-        <li><a href="#"> Eligibility</a></li>
-        <li><a href="#"> Contact Us</a></li>
-        <li><a href="#"> Feedback</a></li>
-    </ul>
-    <form>
-        <p>Students Registration </p>
+    <table>
 
-    </form>
+        <form action=" " style="text-align: center; padding: 100px;">
+            <tr>
+                <td>
+                    <label for="">uid</label>
+                    <input type="text" name="uid"> <br>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <label for="">password</label>
+                    <input type="password" name="password"> <br>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <input type="submit" value="Login">
+                    <input type="reset" value="clear">
+                </td>
+            </tr>
+        </form>
+    </table>
 </body>
 </html>
