--- a/Ques2.html
+++ b/Ques2.html
@@ -1,27 +1,22 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <style>
-        a {
-            text-decoration: none;
-        }
-        li {
-            list-style-type: none;
-            display: inline;
-            padding: 25px;
-            background-color: rgb(133, 148, 225);
-        }
-
-        li:hover {
-            background-color: rgb(204, 232, 141);
-        }
-    </style>
+    <title>birthday forms</title>
 </head>
 <body>
-    <ul>
-        <li> <a href="#"> HOME </a> </li>
-        <li> <a href="#"> NEWS </a> </li>
-        <li> <a href="#"> CONTACTS </a> </li>
-        <li> <a href="#"> ABOUT </a> </li>
-    </ul>
+    <form action="">
+        <label for="">Name</label>
+        <input type="text" name="name" list="names"> <br/>
+        <label for="">Email</label>
+        <input type="text" email="" id="user id" required placeholder=""> <br/>
+        <label for="">Birth Date</label>
+        <input type="text" birthdate="" >
+        
+    </form>
 </body>
 </html>
+
+
+
+
+
