list and tables in html
list and tables in html

--- a/ques2.html
+++ b/ques2.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Display Image</title>
+    <title>Weekly Timetable</title>
 </head>
 <body>
-    <h2>Displaying Image</h2>
-    <img src="Desert.jpeg" width="600" height="500">
-    
+    <table style="text-align: center; border-collapse: collapse;" border="1">
+        <tr>
+            <th> </th>
+            <th> Monday</th>
+            <th> Tuesday</th>
+            <th> Wednesday</th>
+            <th> Thursday</th>
+            <th> Friday</th>
+        </tr>
+
+        <tr>
+            <td >1:00</td>
+            <td style="background-color: bisque;" rowspan="2">Office</td>
+            <td></td>
+            <td style="background-color: bisque;" rowspan="2">Office</td>
+            <td style="background-color: bisque;" rowspan="8">Office Hours By Appt</td>
+            <td style="background-color: bisque;" rowspan="2">Office</td>
+        </tr>
+
+        <tr>
+            <td>1:30</td>
+            <td style="background-color: gray;" rowspan="2">Dept Meeting</td>
+        </tr>
+        <tr>
+            <td>2:00</td>
+            <td style="background-color: rgb(17, 243, 36)" rowspan="3">MAT 108</td>
+            <td style="background-color: rgb(17, 243, 36)" rowspan="3">MAT 108</td>
+            <td style="background-color: rgb(17, 243, 36)" rowspan="3">MAT 108</td>
+        </tr>
+
+        <tr>
+            <td>2:30</td>
+        </tr>
+        <tr>
+            <td>3:00</td>
+            <td style="background-color: gray;" rowspan="3">EC Meeting</td>
+        </tr>
+
+        <tr>
+            <td>3:30</td>
+            <td style="background-color: rgb(236, 147, 224)" rowspan="3">CSE 205</td>
+            <td style="background-color: rgb(236, 147, 224)" rowspan="3">CSE 205</td>
+            <td style="background-color: rgb(236, 147, 224)" rowspan="3">CSE 205</td>
+        </tr>
+
+        <tr  >
+            <td>4:00</td>
+        </tr>
+
+        <tr>
+            <td>4:30</td>
+        </tr>
+    </table>
 </body>
 </html>
