--- a/ques3.html
+++ b/ques3.html
@@ -1,10 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>text Scolling</title>
+    <title>Different types of list</title>
 </head>
-<body style="font-size: x-large;">
-    <marquee direction="right">!!! Welcome !!!</marquee> 
-    <marquee direction="left">!!! Welcome !!!</marquee> 
+<body>
+    <table cellpadding="20" style=" border-collapse: collapse;" border="1">
+        <tr>
+            <td>Sports
+                <ul style="text-align: left;">
+                    <li>Football</li>
+                    <li>Baseball</li>
+                    <li>Cricket</li>
+                </ul>
+            </td>
+
+            <td>Fruits
+                <ul type="square" style="text-align: left;">
+                    <li>Banana</li>
+                    <li>Apple</li>
+                    <li>Grapes</li>
+                </ul>
+            </td>
+
+            <td>players
+                <ul type="circle" style="text-align: left;">
+                    <li>Batsman</li>
+                    <li>Bower</li>
+                    <li>Fielder</li>
+                    <li>Wicket keeper</li>
+                </ul>
+            </td>
+
+        </tr>
+            <td>Subjects
+                <ol style="text-align: left;">
+                    <li>C Programming </li>
+                    <li>OOPs</li>
+                    <li>Data Structure</li>
+                </ol>
+            </td>
+            <td>Topics
+                <ol type="I" style="text-align: left;">
+                    <li>Selection Statement</li>
+                    <li>Control Structure</li>
+                    <li>Functions</li>
+                </ol>
+            </td>
+            <td>Employee
+                <ol type="a" style="text-align: left;">
+                    <li>Programmer</li>
+                    <li>Admin</li>
+                    <li>Sales Manager</li>
+                </ol>
+            </td>
+        <tr>
+            
+        </tr>
+
+        <tr>
+           <td colspan="3">Web Development <br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br>
+            Quaerat voluptates ab reiciendis voluptatibus doloribus beatae <br>
+             ea, quod repudiandae, vero perferendis, minus fuga eum eos officia <br>
+             pariatur nihil quam similique dolor.</td>
+            
+        </tr>
+
+    </table>
 </body>
 </html>
