--- a/ques1.html
+++ b/ques1.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Data Structure </title>
+    <title> Colour Table </title>
 </head>
 <body>
-    <h1 style="text-align: center;"> Data Structure </h1>
-    <p>Stack is a <span>linear data structure </mark>. <br>
-        It works on the principle of <u>LIFO</u>(last in first out) which means lastly pushed element can be popped out first. <br>
-        Stack can be implemented using array or linked list. <br>
-        Dynamic stack is a stack which will never exercise stack overflow condition. <br>
-        Stack data structure is used by operating system to solve different kinds of expression.
-    </p>
+    <table style="text-align: right;">
+        <tr>
+            <td>Red</td>
+            <td width="20" height="20" style="background-color: red;" ></td>
+        </tr>
+        <tr>
+            <td>Blue</td>
+            <td width="20" height="20" style="background-color: blue;"></td>
+        </tr>
+        <tr>
+            <td>Green</td>
+            <td width="20" height="20" style="background-color: green;"></td>
+        </tr>
+        <tr>
+            <td>Orange</td>
+            <td width="20" height="20" style="background-color: orange;"></td>
+        </tr>
+    </table>
 </body>
 </html>
