Question 2  -  Introduction to React  -  create multiple page application using html and css
Question 2  -  Introduction to React  -  create multiple page application using html and css

--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ques_1</title>
+    <title>Document</title>
 </head>
 <body>
-    <div >
-        <a href="home.js">Home</a> |
-        <a href="about.js">About Us</a> |
-        <a href="contact.js">Contact Us</a> 
-        <hr>
-    </div>
-    <h1>Hello World</h1>
+    
 </body>
 </html>
